Created settings, variables, header sass files, added normalize.scss file and included this files in style.sass file also added styles in header

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,2 +1,8 @@
-*
-	box-sizing: border-box
+// Подключение переменных
+@import 'variables'
+// Подключение базовых настроек
+@import 'settings'
+// Подключение normalize
+@import  'normalize'
+// Подключение для блока header
+@import 'blocks/header'
