added styles, created _media.sass file and included in style.sass also added style in media sass file

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -5,7 +5,16 @@ body
 	font-family: 'Mulish', sans-serif
 	font-family: 'Nunito', sans-serif
 	color: $text-color
+//.header,
+//section,
+//footer
+//	max-width: 1440px
+//	margin: auto
 
 .container
 	max-width: 1110px
 	margin: auto
+ul,ol
+	list-style: none
+	margin: 0
+	padding: 0
