--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,12 @@ body {
   margin: auto;
 }
 
+ul, ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -362,7 +368,13 @@ template {
   justify-content: space-between;
   padding: 40px 0;
 }
+
+.logo {
+  width: 177px;
+}
+
 .header__search {
+  width: 350px;
   margin-right: auto;
   margin-left: 108px;
 }
@@ -375,7 +387,6 @@ template {
   height: 40px;
 }
 .search__input {
-  width: 350px;
   height: 100%;
   background: #F5FAFE;
   border: none;
@@ -411,4 +422,74 @@ template {
   line-height: 18px;
   color: #333;
   margin-left: 18px;
+}
+
+.header-menu {
+  background: #0A223D;
+  padding: 31px 0;
+  color: #fff;
+}
+
+.menu__list {
+  padding-left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0;
+}
+.menu__link {
+  color: inherit;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 18px;
+}
+
+.header-bottom {
+  padding: 18px 0;
+}
+
+.breadcrumb__list {
+  display: flex;
+}
+.breadcrumb__item {
+  line-height: 13px;
+}
+.breadcrumb__link {
+  color: inherit;
+  font-size: 10px;
+  line-height: 13px;
+  text-decoration: none;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    max-width: 960px;
+  }
+}
+@media (max-width: 992px) {
+  .container {
+    max-width: 700px;
+  }
+
+  .header-top {
+    padding: 30px 0;
+  }
+  .header-menu {
+    padding: 22px 0;
+  }
+  .header__search {
+    margin-left: auto;
+  }
+
+  .menu__link {
+    font-size: 12px;
+    line-height: 15px;
+  }
+}
+@media (max-width: 768px) {
+  .container {
+    max-width: 576px;
+    width: 95%;
+  }
 }/*# sourceMappingURL=style.css.map */
