--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -5,7 +5,11 @@
 		align-items: center
 		justify-content: space-between
 		padding: 40px 0
+.logo
+	width: 177px
+.header
 	&__search
+		width: 350px
 		margin-right: auto
 		margin-left: 108px
 .search
@@ -15,7 +19,6 @@
 	border-radius: 6px
 	height: 40px
 	&__input
-		width: 350px
 		height: 100%
 		background: #F5FAFE
 		border: none
@@ -45,37 +48,33 @@
 		line-height: 18px
 		color: $text-color
 		margin-left: 18px
-
 .header-menu
-
+	background: $dark
+	padding: 31px 0
+	color: $white
 .menu
-
 	&__list
-
-	&__item
-
+		padding-left: 0
+		display: flex
+		align-items: center
+		justify-content: space-between
+		margin: 0
 	&__link
-
-.item-1
-
-.active
-
-.item-2
-
-.item-3
-
-.item-4
-
-.item-5
-
-.item-6
-
-.item-7
-
+		color: inherit
+		text-decoration: none
+		text-transform: uppercase
+		font-size: 14px
+		line-height: 18px
 .header-bottom
-
+	padding: 18px 0
 .breadcrumb
 
 	&__list
-
-		&__item
+		display: flex
+	&__item
+		line-height: 13px
+	&__link
+		color: inherit
+		font-size: 10px
+		line-height: 13px
+		text-decoration: none
