added and changed styles

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -5,15 +5,11 @@ body
 	font-family: 'Mulish', sans-serif
 	font-family: 'Nunito', sans-serif
 	color: $text-color
-//.header,
-//section,
-//footer
-//	max-width: 1440px
-//	margin: auto
-
 .container
 	max-width: 1110px
 	margin: auto
+img
+	max-width: 100%
 ul,ol
 	list-style: none
 	margin: 0
