--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -9,7 +9,6 @@
 	width: 177px
 .header
 	&__search
-		width: 350px
 		margin-right: auto
 		margin-left: 108px
 .search
@@ -19,6 +18,7 @@
 	border-radius: 6px
 	height: 40px
 	&__input
+		width: 350px
 		height: 100%
 		background: #F5FAFE
 		border: none
@@ -48,6 +48,8 @@
 		line-height: 18px
 		color: $text-color
 		margin-left: 18px
+.hamburger
+	display: none
 .header-menu
 	background: $dark
 	padding: 31px 0
