--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ body {
   margin: auto;
 }
 
+img {
+  max-width: 100%;
+}
+
 ul, ol {
   list-style: none;
   margin: 0;
@@ -374,7 +378,6 @@ template {
 }
 
 .header__search {
-  width: 350px;
   margin-right: auto;
   margin-left: 108px;
 }
@@ -387,6 +390,7 @@ template {
   height: 40px;
 }
 .search__input {
+  width: 350px;
   height: 100%;
   background: #F5FAFE;
   border: none;
@@ -422,6 +426,10 @@ template {
   line-height: 18px;
   color: #333;
   margin-left: 18px;
+}
+
+.hamburger {
+  display: none;
 }
 
 .header-menu {
@@ -472,6 +480,10 @@ template {
     max-width: 700px;
   }
 
+  .logo {
+    width: 132px;
+  }
+
   .header-top {
     padding: 30px 0;
   }
@@ -480,6 +492,9 @@ template {
   }
   .header__search {
     margin-left: auto;
+  }
+  .header__input {
+    width: 340px;
   }
 
   .menu__link {
@@ -491,5 +506,33 @@ template {
   .container {
     max-width: 576px;
     width: 95%;
+  }
+
+  .search, .user, .header-menu {
+    display: none;
+  }
+
+  .hamburger {
+    width: 16px;
+    height: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    border: none;
+    background-color: #fff;
+  }
+  .hamburger:focus {
+    outline: 0;
+  }
+  .hamburger__line {
+    width: 16px;
+    height: 1px;
+    border: 1px solid #333;
+  }
+}
+@media (max-width: 576px) {
+  .logo {
+    width: 99px;
   }
 }/*# sourceMappingURL=style.css.map */
