--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -4,6 +4,8 @@
 @media (max-width: 992px)
 	.container
 		max-width: 700px
+	.logo
+		width: 132px
 	.header
 		&-top
 			padding: 30px 0
@@ -11,6 +13,8 @@
 			padding: 22px 0
 		&__search
 			margin-left: auto
+		&__input
+			width: 340px
 	.menu
 		&__link
 			font-size: 12px
@@ -19,3 +23,24 @@
 	.container
 		max-width: 576px
 		width: 95%
+	.search,.user,.header-menu
+		display: none
+	.hamburger
+		width: 16px
+		height: 12px
+		display: flex
+		flex-direction: column
+		align-items: center
+		justify-content: space-between
+		border: none
+		background-color: $white
+		&:focus
+			outline: 0
+		&__line
+			width: 16px
+			height: 1px
+			border: 1px solid $text-color
+@media ( max-width: 576px)
+	.logo
+		width: 99px
+	
