created _breadcrumb.sass file, included in style.sass and added styles for breadcrumb

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -27,7 +27,7 @@
 		display: none
 	.hamburger
 		width: 16px
-		height: 12px
+		height: 11px
 		display: flex
 		flex-direction: column
 		align-items: center
@@ -39,7 +39,7 @@
 		&__line
 			width: 16px
 			height: 1px
-			border: 1px solid $text-color
+			background-color: $text-color
 @media ( max-width: 576px)
 	.logo
 		width: 99px
