--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,5 +6,7 @@
 @import  'normalize'
 // Подключение для блока header
 @import 'blocks/header'
+// Подключение для блока breadcrumb
+@import 'blocks/_breadcrumb'
 // Подключение стилей для адаптива
 @import 'media'
