--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 body {
   font-family: "Mulish", sans-serif;
   font-family: "Nunito", sans-serif;
+  background-color: #F5FAFE;
   color: #333;
 }
 
@@ -372,24 +373,21 @@ template {
   justify-content: space-between;
   padding: 40px 0;
 }
-
-.logo {
+.header .logo {
   width: 177px;
 }
-
-.header__search {
+.header .header__search {
   margin-right: auto;
   margin-left: 108px;
 }
-
-.search {
+.header .search {
   display: flex;
   position: relative;
   overflow: hidden;
   border-radius: 6px;
   height: 40px;
 }
-.search__input {
+.header .search__input {
   width: 350px;
   height: 100%;
   background: #F5FAFE;
@@ -400,7 +398,7 @@ template {
   line-height: 15px;
   color: #333;
 }
-.search__button {
+.header .search__button {
   position: absolute;
   right: 0;
   width: 65px;
@@ -408,44 +406,40 @@ template {
   border: 0;
   background-color: #EC1F46;
 }
-
-.user {
+.header .user {
   display: flex;
   align-items: center;
   text-decoration: none;
 }
-.user__avatar {
+.header .user__avatar {
   width: 40px;
   height: 40px;
   border-radius: 50%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-.user__name {
+.header .user__name {
   font-size: 14px;
   line-height: 18px;
   color: #333;
   margin-left: 18px;
 }
-
-.hamburger {
+.header .hamburger {
   display: none;
 }
-
-.header-menu {
+.header .header-menu {
   background: #0A223D;
   padding: 31px 0;
   color: #fff;
 }
-
-.menu__list {
+.header .menu__list {
   padding-left: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin: 0;
 }
-.menu__link {
+.header .menu__link {
   color: inherit;
   text-decoration: none;
   text-transform: uppercase;
@@ -453,20 +447,24 @@ template {
   line-height: 18px;
 }
 
-.header-bottom {
-  padding: 18px 0;
+.breadcrumb {
+  background-color: #F5FAFE;
 }
-
-.breadcrumb__list {
+.breadcrumb-nav__list {
   display: flex;
+  padding: 21px 0;
 }
-.breadcrumb__item {
-  line-height: 13px;
-}
-.breadcrumb__link {
-  color: inherit;
+.breadcrumb-nav__item {
   font-size: 10px;
-  line-height: 13px;
+  line-height: 8px;
+}
+.breadcrumb-nav__item:not(:last-child)::after {
+  content: "/";
+  margin-left: 4px;
+  margin-right: 4px;
+}
+.breadcrumb-nav__link {
+  color: inherit;
   text-decoration: none;
 }
 
@@ -514,7 +512,7 @@ template {
 
   .hamburger {
     width: 16px;
-    height: 12px;
+    height: 11px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -528,7 +526,7 @@ template {
   .hamburger__line {
     width: 16px;
     height: 1px;
-    border: 1px solid #333;
+    background-color: #333;
   }
 }
 @media (max-width: 576px) {
