--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -4,6 +4,7 @@
 body
 	font-family: 'Mulish', sans-serif
 	font-family: 'Nunito', sans-serif
+	background-color: $secondary
 	color: $text-color
 .container
 	max-width: 1110px
