created file _hotel.sass, include in style.sass, added style in _hotel.sass also added block hotel and added slider into block hotel

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
 
 body {
   font-family: "Mulish", sans-serif;
-  font-family: "Nunito", sans-serif;
   background-color: #F5FAFE;
   color: #333;
 }
@@ -466,6 +465,209 @@ template {
 .breadcrumb-nav__link {
   color: inherit;
   text-decoration: none;
+}
+
+.hotel__stars {
+  flex-basis: 100%;
+}
+.hotel__name {
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-right: 14px;
+  font-size: 24px;
+  line-height: 30px;
+}
+.hotel__offer {
+  font-size: 10px;
+  line-height: 12px;
+  font-weight: 600;
+  color: #fff;
+  display: inline-block;
+  padding: 4px 9px;
+  background: #EC1F46;
+  border-radius: 3px;
+}
+.hotel__description {
+  margin: 0;
+  font-size: 12px;
+  line-height: 15px;
+}
+.hotel__rating {
+  width: 65px;
+  height: 45px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  border-radius: 4px;
+  background-color: #EC1F46;
+  color: #fff;
+}
+.hotel__rating-text {
+  font-weight: 600;
+  font-size: 8px;
+  line-height: 10px;
+}
+.hotel__rating-digit {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 18px;
+}
+.hotel__rating-digit span {
+  font-size: 10px;
+  line-height: 13px;
+}
+
+.hotel-info__top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 28px 0;
+}
+.hotel-info__top-left {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  max-width: 450px;
+}
+.hotel-info__bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 70px;
+}
+.hotel-info__bottom-left {
+  max-width: 728px;
+  max-height: 450px;
+  background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%);
+  border-radius: 8px;
+  position: relative;
+}
+
+.hotel .swiper {
+  width: 728px;
+  height: 450px;
+  position: relative;
+  border-radius: 8px;
+}
+.hotel .swiper::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%);
+}
+.hotel .swiper-button {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  border: none;
+  z-index: 2;
+  cursor: pointer;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 10px;
+  background-color: transparent;
+}
+.hotel .swiper-button:focus {
+  outline: 0;
+}
+.hotel .swiper-button--prev {
+  left: 18px;
+  background-image: url(../img/arrow-left.svg);
+}
+.hotel .swiper-button--next {
+  right: 18px;
+  background-image: url(../img/arrow-right.svg);
+}
+.hotel__quick-booking {
+  max-width: 350px;
+  min-height: 210px;
+  display: flex;
+  flex-wrap: wrap;
+  background: #0A223D;
+  border-radius: 8px;
+  margin-bottom: 24px;
+  color: #fff;
+  padding: 26px 29px;
+}
+
+.price-booking {
+  display: flex;
+  flex-direction: column;
+  margin-right: 120px;
+}
+
+.price-as {
+  font-size: 10px;
+  line-height: 14px;
+}
+
+.price {
+  font-weight: 800;
+  font-size: 24px;
+  line-height: 33px;
+}
+
+.per {
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.guests-room {
+  display: flex;
+  flex-direction: column;
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.guests {
+  margin-bottom: 8px;
+}
+.guests img {
+  margin-right: 9px;
+  float: left;
+}
+
+.room img {
+  margin-right: 9px;
+  float: left;
+}
+
+.quick-booking {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-basis: 100%;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 25px;
+}
+
+.phone img {
+  margin-right: 9px;
+}
+
+.button {
+  max-width: 295px;
+  max-height: 45px;
+  display: inline-block;
+  background: #EC1F46;
+  padding: 11px 80px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 19px;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  margin-top: 17px;
 }
 
 @media (max-width: 1200px) {
