--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,5 +8,7 @@
 @import 'blocks/header'
 // Подключение для блока breadcrumb
 @import 'blocks/_breadcrumb'
+// Подключение для блока hotel
+@import 'blocks/_hotel'
 // Подключение стилей для адаптива
 @import 'media'
