--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -60,9 +60,6 @@
 	&__bottom-left
 		max-width: 728px
 		max-height: 450px
-		background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
-		border-radius: 8px
-		position: relative
 .hotel
 	.swiper
 		width: 728px
@@ -97,10 +94,10 @@
 				outline: 0
 			&--prev
 				left: 18px
-				background-image: url(../img/arrow-left.svg)
+				background-image: url(../image/arrow-left.svg)
 			&--next
 				right: 18px
-				background-image: url(../img/arrow-right.svg)
+				background-image: url(../image/arrow-right.svg)
 	&__quick-booking
 		max-width: 350px
 		min-height: 210px
