--- a/css/style.css
+++ b/css/style.css
@@ -532,13 +532,17 @@ template {
 }
 .hotel-info__bottom {
   display: flex;
-  align-items: center;
   justify-content: space-between;
   padding-bottom: 70px;
 }
 .hotel-info__bottom-left {
   max-width: 728px;
   max-height: 450px;
+}
+.hotel-info__bottom-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .hotel .swiper {
@@ -557,7 +561,6 @@ template {
   bottom: 0;
   left: 0;
   right: 0;
-  background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%);
 }
 .hotel .swiper-button {
   width: 30px;
@@ -585,21 +588,22 @@ template {
   background-image: url(../image/arrow-right.svg);
 }
 .hotel__quick-booking {
-  max-width: 350px;
-  min-height: 210px;
-  display: flex;
-  flex-wrap: wrap;
+  width: 350px;
+  height: 210px;
   background: #0A223D;
   border-radius: 8px;
-  margin-bottom: 24px;
   color: #fff;
-  padding: 26px 29px;
+  padding: 26px;
+}
+
+.price-room {
+  display: flex;
+  justify-content: space-between;
 }
 
 .price-booking {
   display: flex;
   flex-direction: column;
-  margin-right: 120px;
 }
 
 .price-as {
@@ -627,49 +631,74 @@ template {
 
 .guests {
   margin-bottom: 8px;
+  display: flex;
+  justify-content: space-between;
 }
-.guests img {
-  margin-right: 9px;
-  float: left;
+.guests span {
+  margin-left: 9px;
 }
 
-.room img {
-  margin-right: 9px;
-  float: left;
+.room {
+  display: flex;
+  justify-content: space-between;
+}
+.room span {
+  margin-left: 9px;
 }
 
 .quick-booking {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  flex-basis: 100%;
+  flex-basis: 97.9%;
   font-weight: 600;
   font-size: 18px;
   line-height: 25px;
+  margin-top: 9px;
 }
 
-.phone img {
-  margin-right: 9px;
+.phone {
+  text-decoration: none;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+}
+.phone span {
+  margin-left: 9px;
 }
 
 .button {
-  max-width: 295px;
-  max-height: 45px;
+  width: 100%;
+  min-height: 45px;
   display: inline-block;
   background: #EC1F46;
-  padding: 11px 80px;
   font-weight: 600;
   font-size: 14px;
-  line-height: 19px;
+  line-height: 45px;
   color: #fff;
   text-decoration: none;
+  text-align: center;
   border-radius: 4px;
   margin-top: 17px;
+}
+
+iframe {
+  border-radius: 10px;
 }
 
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
+  }
+
+  .hotel .swiper {
+    width: 590px;
+  }
+  .hotel .swiper .slider-image {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }
 @media (max-width: 992px) {
@@ -681,22 +710,43 @@ template {
     width: 132px;
   }
 
-  .header-top {
+  .header .header-top {
     padding: 30px 0;
   }
-  .header-menu {
+  .header .header-menu {
     padding: 22px 0;
   }
-  .header__search {
+  .header .header__search {
     margin-left: auto;
   }
-  .header__input {
+  .header .header__input {
     width: 340px;
   }
 
   .menu__link {
     font-size: 12px;
     line-height: 15px;
+  }
+
+  .hotel-info__bottom {
+    flex-direction: column;
+  }
+  .hotel-info__bottom-left {
+    margin-bottom: 30px;
+  }
+  .hotel-info__bottom-right {
+    flex-direction: row;
+  }
+
+  .hotel .swiper {
+    width: 100%;
+  }
+  .hotel__quick-booking {
+    width: 340px;
+  }
+
+  iframe {
+    width: 340px;
   }
 }
 @media (max-width: 768px) {
@@ -705,11 +755,10 @@ template {
     width: 95%;
   }
 
-  .search, .user, .header-menu {
+  .header .search, .header .user, .header .header-menu {
     display: none;
   }
-
-  .hamburger {
+  .header .hamburger {
     width: 16px;
     height: 11px;
     display: flex;
@@ -719,17 +768,41 @@ template {
     border: none;
     background-color: #fff;
   }
-  .hamburger:focus {
+  .header .hamburger:focus {
     outline: 0;
   }
-  .hamburger__line {
+  .header .hamburger__line {
     width: 16px;
     height: 1px;
     background-color: #333;
+  }
+
+  .hotel .swiper {
+    height: 350px;
+  }
+  .hotel__quick-booking {
+    width: 100%;
+  }
+
+  .hotel-info__bottom-right {
+    flex-direction: column;
+    min-height: 450px;
+  }
+
+  iframe {
+    width: 100%;
   }
 }
 @media (max-width: 576px) {
   .logo {
     width: 99px;
+  }
+
+  .hotel-info__bottom-left {
+    margin-bottom: 20px;
+  }
+
+  .hotel .swiper {
+    height: 250px;
   }
 }/*# sourceMappingURL=style.css.map */
