--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,46 +1,87 @@
 @media (max-width: 1200px)
 	.container
 		max-width: 960px
+	.hotel
+		.swiper
+			width: 590px
+			.slider-image
+				width: 100%
+				height: 100%
+				object-fit: cover
 @media (max-width: 992px)
 	.container
 		max-width: 700px
 	.logo
 		width: 132px
 	.header
-		&-top
-			padding: 30px 0
-		&-menu
-			padding: 22px 0
-		&__search
-			margin-left: auto
-		&__input
-			width: 340px
+		.header
+			&-top
+				padding: 30px 0
+			&-menu
+				padding: 22px 0
+			&__search
+				margin-left: auto
+			&__input
+				width: 340px
 	.menu
 		&__link
 			font-size: 12px
 			line-height: 15px
+	.hotel-info
+		&__bottom
+			flex-direction: column
+			&-left
+				margin-bottom: 30px
+			&-right
+				flex-direction: row
+	.hotel
+		.swiper
+			width: 100%
+		&__quick-booking
+			width: 340px
+	iframe
+		width: 340px
 @media (max-width: 768px)
 	.container
 		max-width: 576px
 		width: 95%
-	.search,.user,.header-menu
-		display: none
-	.hamburger
-		width: 16px
-		height: 11px
-		display: flex
-		flex-direction: column
-		align-items: center
-		justify-content: space-between
-		border: none
-		background-color: $white
-		&:focus
-			outline: 0
-		&__line
+	.header
+		.search,.user,.header-menu
+			display: none
+		.hamburger
 			width: 16px
-			height: 1px
-			background-color: $text-color
+			height: 11px
+			display: flex
+			flex-direction: column
+			align-items: center
+			justify-content: space-between
+			border: none
+			background-color: $white
+			&:focus
+				outline: 0
+			&__line
+				width: 16px
+				height: 1px
+				background-color: $text-color
+	.hotel
+		.swiper
+			height: 350px
+		&__quick-booking
+			width: 100%
+	.hotel-info
+		&__bottom
+			&-right
+				flex-direction: column
+				min-height: 450px
+	iframe
+		width: 100%
 @media ( max-width: 576px)
 	.logo
 		width: 99px
-	
+	.hotel-info
+		&__bottom
+			&-left
+				margin-bottom: 20px
+	.hotel
+		.swiper
+			height: 250px
