--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -97,10 +97,10 @@
 				outline: 0
 			&--prev
 				left: 18px
-				background-image: url(../image/arrow-left.svg)
+				background-image: url(../image/white-arrow-left.svg)
 			&--next
 				right: 18px
-				background-image: url(../image/arrow-right.svg)
+				background-image: url(../image/white-arrow-right.svg)
 	&__quick-booking
 		width: 350px
 		height: 210px
