--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,5 +10,9 @@
 @import 'blocks/_breadcrumb'
 // Подключение для блока hotel
 @import 'blocks/_hotel'
+// Подключение для блока newsletter
+@import 'blocks/_newsletter'
+// Подключение для блока about us
+@import 'blocks/_about-us'
 // Подключение стилей для адаптива
 @import 'media'
