changed file name _about-us.sass to _reviews.sass, styles in this file also newsletter & media queries

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -13,6 +13,6 @@
 // Подключение для блока newsletter
 @import 'blocks/_newsletter'
 // Подключение для блока about us
-@import 'blocks/_about-us'
+@import 'blocks/_reviews'
 // Подключение стилей для адаптива
 @import 'media'
