--- a/css/style.css
+++ b/css/style.css
@@ -688,14 +688,18 @@ iframe {
 
 .newsletter {
   position: relative;
-  background: rgba(10, 34, 61, 0.8);
   padding-top: 98px;
   padding-bottom: 87px;
+  background-image: url(../../image/newsletter-bg.jpg);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 .newsletter .container {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 .newsletter ::before {
   content: "";
@@ -707,7 +711,10 @@ iframe {
   left: 0;
   right: 0;
   z-index: -1;
-  background-image: url(../../image/newsletter.jpg);
+  background: rgba(10, 34, 61, 0.4);
+}
+.newsletter__text {
+  z-index: 1;
 }
 .newsletter__text-subscribe {
   font-size: 24px;
@@ -722,15 +729,18 @@ iframe {
   color: #fff;
   margin: 0;
 }
-.newsletter__form-subscribe {
-  display: flex;
+
+.subscribe {
   position: relative;
-  overflow: hidden;
-  border-radius: 6px;
-  height: 55px;
-}
-.newsletter__form-subscribe-input {
   width: 350px;
+  height: 55px;
+  overflow: hidden;
+  border-radius: 4px;
+  z-index: 1;
+}
+.subscribe__input {
+  position: absolute;
+  width: 100%;
   height: 100%;
   border: none;
   padding-left: 33px;
@@ -740,26 +750,25 @@ iframe {
   line-height: 18px;
   color: #333;
 }
-.newsletter__form-subscribe-button {
+.subscribe__button {
   position: absolute;
+  top: 0;
   right: 0;
   width: 65px;
   height: 100%;
   border: 0;
   background-color: #EC1F46;
-}
-.newsletter__form-subscribe-text {
+  color: #fff;
   font-weight: bold;
   font-size: 12px;
   line-height: 15px;
-  color: #fff;
 }
 
-.about-us {
+.reviews {
   padding-top: 40px;
   padding-bottom: 70px;
 }
-.about-us__title {
+.reviews-title {
   font-weight: bold;
   font-size: 36px;
   line-height: 45px;
@@ -769,11 +778,80 @@ iframe {
   margin-top: 0;
   margin-bottom: 70px;
 }
-.about-us__slider {
+.reviews-slider__item {
+  position: relative;
   max-width: 730px;
-  min-height: 280px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  background: #fff;
+  margin: 32px auto 0;
+  padding: 0 62px 30px;
+  border-radius: 8px;
 }
-.about-us__slider .swiper-button {
+.reviews-slider__item::before {
+  content: "";
+  position: absolute;
+  left: 62px;
+  top: 13px;
+  width: 70px;
+  height: 47px;
+  background-image: url(../image/quote-left.svg);
+  background-repeat: no-repeat;
+}
+.reviews-slider__item::after {
+  content: "";
+  position: absolute;
+  top: 62px;
+  right: 118px;
+  width: 70px;
+  height: 47px;
+  background-image: url(../image/quote-right.svg);
+  background-repeat: no-repeat;
+}
+.reviews-slider__profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 32px;
+}
+.reviews-slider__avatar {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-top: -32px;
+}
+.reviews-slider__name {
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  color: #EC1F46;
+  margin-bottom: 10px;
+}
+.reviews-slider__date {
+  font-size: 10px;
+  line-height: 13px;
+  margin-bottom: 4px;
+}
+.reviews-slider__rating {
+  height: 10px;
+  line-height: 7px;
+}
+.reviews-slider__rating-star {
+  width: 8px;
+  height: 8px;
+}
+.reviews-slider__text {
+  max-width: 537px;
+  margin: auto;
+  font-size: 12px;
+  line-height: 160%;
+  text-align: justify;
+}
+.reviews-slider__button {
   width: 30px;
   height: 30px;
   position: absolute;
@@ -787,52 +865,16 @@ iframe {
   background-size: 10px;
   background-color: transparent;
 }
-.about-us__slider .swiper-button--prev {
-  left: 18px;
+.reviews-slider__button:focus {
+  outline: 0;
+}
+.reviews-slider__button--prev {
+  left: 0px;
   background-image: url(../image/gray-arrow-left.svg);
 }
-.about-us__slider .swiper-button--next {
-  right: 18px;
+.reviews-slider__button--next {
+  right: 0px;
   background-image: url(../image/gray-arrow-right.svg);
-}
-.about-us__slide {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  height: 100%;
-  background: #fff;
-  padding: 0 96px 30px 96px;
-  border-radius: 8px;
-}
-.about-us__slide-image {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-.about-us__slide-name {
-  font-weight: bold;
-  font-size: 12px;
-  line-height: 15px;
-  color: #EC1F46;
-  margin-bottom: 10px;
-}
-.about-us__slide-stayed-date {
-  font-size: 10px;
-  line-height: 13px;
-  margin-bottom: 4px;
-}
-.about-us__slide-rating {
-  margin-bottom: 32px;
-  height: 10px;
-  line-height: 7px;
-}
-.about-us__slide-rating-star {
-  width: 8px;
-  height: 8px;
 }
 
 @media (max-width: 1200px) {
@@ -897,6 +939,10 @@ iframe {
   iframe {
     width: 340px;
   }
+
+  .reviews-slider__item {
+    max-width: 580px;
+  }
 }
 @media (max-width: 768px) {
   .container {
@@ -960,16 +1006,36 @@ iframe {
     font-size: 30px;
     line-height: 38px;
   }
-  .newsletter__form-subscribe {
-    width: 280px;
+
+  .subscribe {
+    width: 300px;
   }
 
-  .about-us {
+  .reviews {
     padding-bottom: 36px;
   }
-  .about-us__title {
+  .reviews-title {
     font-size: 18px;
     line-height: 23px;
+  }
+  .reviews-slider__item {
+    padding: 0 30px 30px;
+  }
+  .reviews-slider__item::after, .reviews-slider__item::before {
+    display: none;
+  }
+  .reviews-slider__button {
+    top: 18px;
+  }
+  .reviews-slider__button--prev {
+    left: 50%;
+    transform: translate(-50%, 0);
+    margin-left: -65px;
+  }
+  .reviews-slider__button--next {
+    right: 50%;
+    transform: translate(50%, 0);
+    margin-right: -65px;
   }
 }
 @media (max-width: 576px) {
@@ -981,6 +1047,9 @@ iframe {
     margin-bottom: 20px;
   }
 
+  .hotel__name {
+    font-size: 20px;
+  }
   .hotel .swiper {
     height: 250px;
   }
@@ -989,10 +1058,12 @@ iframe {
     flex-direction: column;
   }
 
-  .about-us__slide {
-    padding: 0 31px 36px 31px;
+  .subscribe {
+    height: 45px;
   }
-  .about-us__slider .swiper-button {
-    top: 0;
+}
+@media (max-width: 320px) {
+  .subscribe {
+    width: 220px;
   }
 }/*# sourceMappingURL=style.css.map */
