--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -41,6 +41,10 @@
 			width: 340px
 	iframe
 		width: 340px
+	.reviews
+		&-slider
+			&__item
+				max-width: 580px
 @media (max-width: 768px)
 	.container
 		max-width: 576px
@@ -88,14 +92,28 @@
 			&-title
 				font-size: 30px
 				line-height: 38px
-		&__form
-			&-subscribe
-				width: 280px
-	.about-us
+	.subscribe
+		width: 300px
+	.reviews
 		padding-bottom: 36px
-		&__title
+		&-title
 			font-size: 18px
 			line-height: 23px
+		&-slider
+			&__item
+				padding: 0 30px 30px
+				&::after,&::before
+					display: none
+			&__button
+				top: 18px
+				&--prev
+					left: 50%
+					transform: translate(-50%, 0)
+					margin-left: -65px
+				&--next
+					right: 50%
+					transform: translate(50%, 0)
+					margin-right: -65px
 @media ( max-width: 576px)
 	.logo
 		width: 99px
@@ -104,14 +122,15 @@
 			&-left
 				margin-bottom: 20px
 	.hotel
+		&__name
+			font-size: 20px
 		.swiper
 			height: 250px
 	.newsletter
 		.container
 			flex-direction: column
-	.about-us
-		&__slide
-			padding: 0 31px 36px 31px
-		&__slider
-			.swiper-button
-				top: 0
+	.subscribe
+		height: 45px
+@media ( max-width: 320px)
+	.subscribe
+		width: 220px
