--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -1,12 +1,16 @@
 .newsletter
 	position: relative
-	background: rgba(10, 34, 61, 0.8)
 	padding-top: 98px
 	padding-bottom: 87px
+	background-image: url(../../image/newsletter-bg.jpg)
+	background-attachment: fixed
+	background-repeat: no-repeat
+	background-position: center
+	background-size: cover
 	.container
 		display: flex
 		align-items: center
-		justify-content: space-around
+		justify-content: space-evenly
 	::before
 		content: ''
 		width: 100%
@@ -17,8 +21,9 @@
 		left: 0
 		right: 0
 		z-index: -1
-		background-image: url(../../image/newsletter.jpg)
+		background: rgba($dark, 0.4)
 	&__text
+		z-index: 1
 		&-subscribe
 			font-size: 24px
 			line-height: 30px
@@ -30,32 +35,33 @@
 			text-transform: uppercase
 			color: $white
 			margin: 0
-	&__form
-		&-subscribe
-			display: flex
-			position: relative
-			overflow: hidden
-			border-radius: 6px
-			height: 55px
-			&-input
-				width: 350px
-				height: 100%
-				border: none
-				padding-left: 33px
-				padding-right: 70px
-				font-weight: 300
-				font-size: 14px
-				line-height: 18px
-				color: $text-color
-			&-button
-				position: absolute
-				right: 0
-				width: 65px
-				height: 100%
-				border: 0
-				background-color: $primary
-			&-text
-				font-weight: bold
-				font-size: 12px
-				line-height: 15px
-				color: $white
+.subscribe
+	position: relative
+	width: 350px
+	height: 55px
+	overflow: hidden
+	border-radius: 4px
+	z-index: 1
+	&__input
+		position: absolute
+		width: 100%
+		height: 100%
+		border: none
+		padding-left: 33px
+		padding-right: 70px
+		font-weight: 300
+		font-size: 14px
+		line-height: 18px
+		color: $text-color
+	&__button
+		position: absolute
+		top: 0
+		right: 0
+		width: 65px
+		height: 100%
+		border: 0
+		background-color: $primary
+		color: $white
+		font-weight: bold
+		font-size: 12px
+		line-height: 15px
