--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,7 +12,9 @@
 @import 'blocks/_hotel'
 // Подключение для блока newsletter
 @import 'blocks/_newsletter'
-// Подключение для блока about us
+// Подключение для блока reviews
 @import 'blocks/_reviews'
+// Подключение для блока activities
+@import 'blocks/_activities'
 // Подключение стилей для адаптива
 @import 'media'
