--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -8,6 +8,13 @@
 				width: 100%
 				height: 100%
 				object-fit: cover
+	.activities
+		&-blocks
+			&__type
+				width: 225px
+				height: 225px
+				&::before
+					width: 225px
 @media (max-width: 992px)
 	.container
 		max-width: 700px
@@ -45,6 +52,16 @@
 		&-slider
 			&__item
 				max-width: 580px
+	.activities
+		&-blocks
+			flex-wrap: wrap
+			&__type
+				width: 339px
+			&__type
+				&:nth-child(1),&:nth-child(2)
+					margin-bottom: 20px
+				&::before
+					width: 339px
 @media (max-width: 768px)
 	.container
 		max-width: 576px
@@ -114,6 +131,12 @@
 					right: 50%
 					transform: translate(50%, 0)
 					margin-right: -65px
+	.activities
+		&-blocks
+			&__type
+				width: 268px
+				&::before
+					width: 268px
 @media ( max-width: 576px)
 	.logo
 		width: 99px
@@ -131,6 +154,15 @@
 			flex-direction: column
 	.subscribe
 		height: 45px
+	.activities
+		&-blocks
+			&__type
+				width: 100%
+				height: 255px
+				&:nth-child(3)
+					margin-bottom: 20px
+				&::before
+					width: 100%
 @media ( max-width: 320px)
 	.subscribe
 		width: 220px
