--- a/css/style.css
+++ b/css/style.css
@@ -623,6 +623,7 @@ template {
 }
 
 .guests-room {
+  width: 85px;
   display: flex;
   flex-direction: column;
   font-size: 12px;
@@ -634,16 +635,10 @@ template {
   display: flex;
   justify-content: space-between;
 }
-.guests span {
-  margin-left: 9px;
-}
 
 .room {
   display: flex;
   justify-content: space-between;
-}
-.room span {
-  margin-left: 9px;
 }
 
 .quick-booking {
@@ -923,6 +918,7 @@ iframe {
   position: absolute;
   left: 26px;
   bottom: 72px;
+  margin: 0;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
