--- a/sass/blocks/_activities.sass
+++ b/sass/blocks/_activities.sass
@@ -37,6 +37,7 @@
 			position: absolute
 			left: 26px
 			bottom: 72px
+			margin: 0
 			font-style: normal
 			font-weight: bold
 			font-size: 16px
