--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -125,6 +125,7 @@
 	font-size: 12px
 	line-height: 16px
 .guests-room
+	width: 85px
 	display: flex
 	flex-direction: column
 	font-size: 12px
@@ -133,13 +134,9 @@
 	margin-bottom: 8px
 	display: flex
 	justify-content: space-between
-	span
-		margin-left: 9px
 .room
 	display: flex
 	justify-content: space-between
-	span
-		margin-left: 9px
 .quick-booking
 	display: flex
 	align-items: center
