created block "packages", _packages.sass file & include in style.sass

--- a/sass/blocks/_activities.sass
+++ b/sass/blocks/_activities.sass
@@ -21,8 +21,6 @@
 			overflow: hidden
 			&::before
 				content: ''
-				width: 255px
-				height: 255px
 				position: absolute
 				top: 0
 				left: 0
@@ -57,3 +55,4 @@
 			font-weight: 600
 			font-size: 12px
 			line-height: 16px
+			cursor: pointer
