--- a/css/style.css
+++ b/css/style.css
@@ -899,8 +899,6 @@ iframe {
 }
 .activities-blocks__type::before {
   content: "";
-  width: 255px;
-  height: 255px;
   position: absolute;
   top: 0;
   left: 0;
@@ -939,6 +937,14 @@ iframe {
   font-weight: 600;
   font-size: 12px;
   line-height: 16px;
+  cursor: pointer;
+}
+
+.packages {
+  padding: 40px 0 70px;
+}
+.packages-title {
+  padding-bottom: 65px;
 }
 
 @media (max-width: 1200px) {
@@ -959,9 +965,6 @@ iframe {
   .activities-blocks__type {
     width: 225px;
     height: 225px;
-  }
-  .activities-blocks__type::before {
-    width: 225px;
   }
 }
 @media (max-width: 992px) {
@@ -1024,9 +1027,6 @@ iframe {
   }
   .activities-blocks__type:nth-child(1), .activities-blocks__type:nth-child(2) {
     margin-bottom: 20px;
-  }
-  .activities-blocks__type::before {
-    width: 339px;
   }
 }
 @media (max-width: 768px) {
@@ -1123,10 +1123,10 @@ iframe {
     margin-right: -65px;
   }
 
-  .activities-blocks__type {
-    width: 268px;
+  .activities {
+    padding: 40px 0 60px;
   }
-  .activities-blocks__type::before {
+  .activities-blocks__type {
     width: 268px;
   }
 }
@@ -1160,9 +1160,6 @@ iframe {
   }
   .activities-blocks__type:nth-child(3) {
     margin-bottom: 20px;
-  }
-  .activities-blocks__type::before {
-    width: 100%;
   }
 }
 @media (max-width: 320px) {
