--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -12,9 +12,7 @@
 		&-blocks
 			&__type
 				width: 225px
-				height: 225px
-				&::before
-					width: 225px
+				height: 225px				
 @media (max-width: 992px)
 	.container
 		max-width: 700px
@@ -58,9 +56,7 @@
 			&__type
 				width: 339px
 				&:nth-child(1),&:nth-child(2)
-					margin-bottom: 20px
-				&::before
-					width: 339px
+					margin-bottom: 20px				
 @media (max-width: 768px)
 	.container
 		max-width: 576px
@@ -131,11 +127,10 @@
 					transform: translate(50%, 0)
 					margin-right: -65px
 	.activities
+		padding: 40px 0 60px
 		&-blocks
 			&__type
-				width: 268px
-				&::before
-					width: 268px
+				width: 268px				
 @media ( max-width: 576px)
 	.logo
 		width: 99px
@@ -159,9 +154,7 @@
 				width: 100%
 				height: 255px
 				&:nth-child(3)
-					margin-bottom: 20px
-				&::before
-					width: 100%
+					margin-bottom: 20px				
 @media ( max-width: 320px)
 	.subscribe
 		width: 220px
