--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,5 +16,7 @@
 @import 'blocks/_reviews'
 // Подключение для блока activities
 @import 'blocks/_activities'
+// Подключение для блока packages
+@import 'blocks/_packages'
 // Подключение стилей для адаптива
 @import 'media'
