--- a/css/style.css
+++ b/css/style.css
@@ -945,6 +945,136 @@ iframe {
 }
 .packages-title {
   padding-bottom: 65px;
+  margin: 0;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 45px;
+  text-align: center;
+  text-transform: uppercase;
+}
+.packages-varieties {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+}
+.packages-varieties__offer {
+  width: 350px;
+  height: 500px;
+  display: grid;
+  grid-template-rows: 50% 50%;
+  border-radius: 8px;
+  overflow: hidden;
+}
+.packages-varieties__offer-first {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-column: 1/3;
+  border-radius: 8px;
+  overflow: hidden;
+}
+.packages-varieties__offer-first-image {
+  width: 100%;
+  height: 100%;
+}
+.packages-varieties__offer-first-info {
+  display: grid;
+  padding: 46px 21px 30px 46px;
+  background-color: #0A223D;
+  color: #fff;
+}
+.packages-varieties__offer-first-title {
+  margin: 0 0 27px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+}
+.packages-varieties__offer-first-services {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  display: grid;
+  gap: 11px;
+  margin-bottom: 37px;
+}
+.packages-varieties__text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 160.6%;
+  margin: 0 0 34px;
+}
+.packages-varieties__image {
+  width: 100%;
+  height: 100%;
+}
+.packages-varieties__info {
+  display: grid;
+  padding: 30px 21px 25px 32px;
+  background-color: #0A223D;
+  color: #fff;
+}
+.packages-varieties__rating {
+  height: 8px;
+  line-height: 5px;
+  margin-bottom: 5px;
+}
+.packages-varieties__title {
+  margin: 0 0 23px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+}
+.packages-varieties__services {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  display: grid;
+  gap: 11px;
+  margin-bottom: 24px;
+}
+.packages-varieties__services-address, .packages-varieties__services-guest, .packages-varieties__services-room {
+  display: grid;
+  grid-template-columns: 10% 90%;
+}
+.packages-varieties__prices {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+.packages-varieties__prices-old-price {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 18px;
+  -webkit-text-decoration-line: line-through;
+          text-decoration-line: line-through;
+}
+.packages-varieties__prices-new-price {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 30px;
+  grid-row: 2;
+}
+.packages-varieties__button {
+  display: inline-block;
+  width: 120px;
+  height: 40px;
+  padding: 10px 25px;
+  background: #EC1F46;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 19px;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  text-align: center;
+  grid-row: 2/3;
 }
 
 @media (max-width: 1200px) {
