--- a/sass/style.sass
+++ b/sass/style.sass
@@ -20,3 +20,5 @@
 @import 'blocks/_packages'
 // Подключение стилей для адаптива
 @import 'media'
+// Подключение стилей для адаптива
+@import 'media-packages'
