--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -14,7 +14,7 @@
 		grid-template-columns: 1fr 1fr 1fr
 		gap: 30px
 		&__offer
-			width: 350px
+			width: 100%
 			height: 500px
 			display: grid
 			grid-template-rows: 50% 50%
@@ -100,8 +100,8 @@
 				grid-row: 2
 		&__button
 			display: inline-block
-			width: 120px
-			height: 40px
+			min-width: 120px
+			min-height: 40px
 			padding: 10px 25px
 			background: $primary
 			font-style: normal
