--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -21,6 +21,7 @@
 			border-radius: 8px
 			overflow: hidden
 			&-first
+				height: 500px
 				display: grid
 				grid-template-columns: 50% 50%
 				grid-column: 1/3
@@ -29,6 +30,7 @@
 				&-image
 					width: 100%
 					height: 100%
+					object-fit: cover
 				&-info
 					display: grid
 					padding: 46px 21px 30px 46px
@@ -57,6 +59,7 @@
 		&__image
 			width: 100%
 			height: 100%
+			object-fit: cover
 		&__info
 			display: grid
 			padding: 30px 21px 25px 32px
