--- a/css/style.css
+++ b/css/style.css
@@ -958,9 +958,26 @@ iframe {
   grid-template-columns: 1fr 1fr 1fr;
   gap: 30px;
 }
+.packages-varieties__flash {
+  position: absolute;
+  left: 0;
+  top: 26px;
+  width: 60px;
+  height: 18px;
+  background: #EC1F46;
+  color: #fff;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 8px;
+  line-height: 10px;
+  padding: 4px 9px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
 .packages-varieties__offer {
   width: 100%;
   height: 500px;
+  position: relative;
   display: grid;
   grid-template-rows: 50% 50%;
   border-radius: 8px;
@@ -968,11 +985,29 @@ iframe {
 }
 .packages-varieties__offer-first {
   height: 500px;
+  position: relative;
   display: grid;
   grid-template-columns: 50% 50%;
   grid-column: 1/3;
   border-radius: 8px;
   overflow: hidden;
+}
+.packages-varieties__offer-first-flash {
+  position: absolute;
+  left: 0;
+  top: 26px;
+  width: 90px;
+  height: 30px;
+  background: #EC1F46;
+  color: #fff;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  text-align: center;
+  line-height: 13px;
+  padding: 8px 12px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 .packages-varieties__offer-first-image {
   width: 100%;
@@ -1328,10 +1363,10 @@ iframe {
 }
 /*-------- Media queries for 768px --------*/
 @media (max-width: 768px) {
-  .packages-varieties__offer-info {
+  .packages-varieties__offer-first-info {
     padding: 25px 20px;
   }
-  .packages-varieties__offer-first-info {
+  .packages-varieties__info {
     padding: 25px 20px;
   }
 }
@@ -1344,6 +1379,9 @@ iframe {
     grid-column: span 1;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
+  }
+  .packages-varieties__offer-first-services {
+    margin-bottom: 24px;
   }
   .packages-varieties__text {
     display: none;
