--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -13,20 +13,53 @@
 		display: grid
 		grid-template-columns: 1fr 1fr 1fr
 		gap: 30px
+		&__flash
+			position: absolute
+			left: 0
+			top: 26px
+			width: 60px
+			height: 18px
+			background: $primary
+			color: $white
+			font-style: normal
+			font-weight: 600
+			font-size: 8px
+			line-height: 10px
+			padding: 4px 9px
+			border-top-right-radius: 4px
+			border-bottom-right-radius: 4px
 		&__offer
 			width: 100%
 			height: 500px
+			position: relative
 			display: grid
 			grid-template-rows: 50% 50%
 			border-radius: 8px
 			overflow: hidden
 			&-first
 				height: 500px
+				position: relative
 				display: grid
 				grid-template-columns: 50% 50%
 				grid-column: 1/3
 				border-radius: 8px
 				overflow: hidden
+				&-flash
+					position: absolute
+					left: 0
+					top: 26px
+					width: 90px
+					height: 30px
+					background: $primary
+					color: $white
+					font-style: normal
+					font-weight: 600
+					font-size: 12px
+					text-align: center
+					line-height: 13px
+					padding: 8px 12px
+					border-top-right-radius: 4px
+					border-bottom-right-radius: 4px
 				&-image
 					width: 100%
 					height: 100%
