created block footer, file _footer.sass & writing styles for him

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,6 +18,8 @@
 @import 'blocks/_activities'
 // Подключение для блока packages
 @import 'blocks/_packages'
+// Подключение для блока footer
+@import 'blocks/_footer'
 // Подключение стилей для адаптива
 @import 'media'
 // Подключение стилей для адаптива
