--- a/css/style.css
+++ b/css/style.css
@@ -1117,6 +1117,71 @@ iframe {
   grid-row: 2/3;
 }
 
+.footer {
+  padding: 108px 0 46px;
+  background-color: #0A223D;
+}
+.footer__title {
+  color: #fff;
+  text-transform: uppercase;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+  margin-top: 0;
+  margin-bottom: 16px;
+}
+.footer__link {
+  color: #BDBDBD;
+  text-decoration: none;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 160%;
+}
+.footer-top {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(-webkit-min-content, 1fr));
+  grid-template-columns: repeat(4, minmax(min-content, 1fr));
+  grid-template-rows: repeat(9, 27px);
+}
+.footer-top__logo {
+  grid-row: 2;
+}
+.footer-top__categories {
+  grid-column: 2;
+  grid-row: 1/3;
+}
+.footer-top__additional {
+  grid-column: 3/5;
+  grid-row: 1/2;
+}
+.footer-top__social {
+  grid-column: 3/5;
+  grid-row: 8;
+  display: flex;
+  align-items: center;
+}
+.footer-top .social--title {
+  margin-bottom: 0;
+  margin-right: 43px;
+}
+.footer-top__legal {
+  grid-column: 4;
+  grid-row: 1;
+  justify-self: end;
+}
+.footer__social:not(:last-child) {
+  margin-right: 12px;
+}
+.footer-middle__contacts {
+  color: #BDBDBD;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 160%;
+}
+
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
