--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,7 +3,7 @@
 // Подключение базовых настроек
 @import 'settings'
 // Подключение normalize
-@import  'normalize'
+@import	'normalize'
 // Подключение для блока header
 @import 'blocks/header'
 // Подключение для блока breadcrumb
@@ -22,5 +22,7 @@
 @import 'blocks/_footer'
 // Подключение стилей для адаптива
 @import 'media'
-// Подключение стилей для адаптива
+// Подключение стилей для адаптива блока packages
 @import 'media-packages'
+// Подключение стилей для адаптива блока footer
+@import '_media-footer'
