--- a/css/style.css
+++ b/css/style.css
@@ -449,6 +449,9 @@ template {
 .breadcrumb {
   background-color: #F5FAFE;
 }
+.breadcrumb__title {
+  display: none;
+}
 .breadcrumb-nav__list {
   display: flex;
   padding: 21px 0;
@@ -1121,6 +1124,13 @@ iframe {
   padding: 108px 0 46px;
   background-color: #0A223D;
 }
+.footer-wrapper {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(-webkit-min-content, 1fr));
+  grid-template-columns: repeat(4, minmax(min-content, 1fr));
+  grid-template-rows: repeat(7, minmax(40px, -webkit-min-content));
+  grid-template-rows: repeat(7, minmax(40px, min-content));
+}
 .footer__title {
   color: #fff;
   text-transform: uppercase;
@@ -1139,47 +1149,132 @@ iframe {
   font-size: 14px;
   line-height: 160%;
 }
-.footer-top {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(-webkit-min-content, 1fr));
-  grid-template-columns: repeat(4, minmax(min-content, 1fr));
-  grid-template-rows: repeat(9, 27px);
+.footer__logo {
+  width: 166px;
+  align-self: center;
+  grid-row: 1/3;
 }
-.footer-top__logo {
-  grid-row: 2;
-}
-.footer-top__categories {
+.footer__categories {
   grid-column: 2;
   grid-row: 1/3;
 }
-.footer-top__additional {
-  grid-column: 3/5;
-  grid-row: 1/2;
-}
-.footer-top__social {
-  grid-column: 3/5;
-  grid-row: 8;
+.footer__social {
+  grid-column: span 2;
+  grid-row: 2/3;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
 }
-.footer-top .social--title {
+.footer .social-title {
   margin-bottom: 0;
   margin-right: 43px;
 }
-.footer-top__legal {
+.footer__icon:not(:last-child) {
+  margin-right: 12px;
+}
+.footer__legal {
   grid-column: 4;
   grid-row: 1;
   justify-self: end;
 }
-.footer__social:not(:last-child) {
-  margin-right: 12px;
-}
-.footer-middle__contacts {
+.footer__contacts {
+  grid-column: span 2;
+  grid-row: 5/6;
   color: #BDBDBD;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 160%;
+}
+.footer__contact {
+  display: grid;
+  grid-template-columns: minmax(30px, -webkit-min-content);
+  grid-template-columns: minmax(30px, min-content);
+}
+.footer__contact:not(:last-child) {
+  margin-bottom: 26px;
+}
+.footer__contact-icon {
+  grid-column: 1;
+  align-self: center;
+}
+.footer__text {
+  margin-top: 0;
+  margin-bottom: 26px;
+}
+.footer__address, .footer__phone, .footer__email {
+  grid-column: 2;
+}
+.footer__message {
+  grid-column: span 2;
+  grid-row: 5/6;
+}
+.footer__form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 30px;
+}
+.footer__input, .footer__textarea {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  padding: 18px 23px;
+  border-radius: 4px;
+  border: none;
+}
+.footer__input {
+  margin-bottom: 15px;
+}
+.footer__input:focus {
+  outline: none;
+}
+.footer__textarea {
+  margin-bottom: 23px;
+  grid-column: span 2;
+}
+.footer__textarea:focus {
+  outline: none;
+}
+.footer__button {
+  min-width: 160px;
+  min-height: 50px;
+  border-radius: 4px;
+  border: none;
+  background: #EC1F46;
+  color: #fff;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  grid-column: 1;
+  justify-self: self-start;
+}
+.footer__required {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  color: #BDBDBD;
+  grid-column: 2;
+  grid-row: 3;
+  align-self: center;
+  justify-self: end;
+}
+.footer__disclaimer {
+  grid-row: 7;
+  grid-column: 2/4;
+}
+.footer__disclaimer-list {
+  display: flex;
+  justify-content: center;
+}
+.footer__disclaimer-item:not(:last-child) {
+  margin-right: 15px;
+}
+.footer__cards {
+  grid-row: 7;
+  grid-column: 4;
+  justify-self: center;
 }
 
 @media (max-width: 1200px) {
@@ -1473,5 +1568,141 @@ iframe {
     min-width: 100px;
     min-height: 30px;
     padding: 8px 20px;
+  }
+}
+@media (max-width: 1200px) {
+  .footer-wrapper {
+    grid-template-columns: repeat(3, minmax(-webkit-min-content, 1fr));
+    grid-template-columns: repeat(3, minmax(min-content, 1fr));
+    grid-template-rows: repeat(11, minmax(40px, -webkit-min-content));
+    grid-template-rows: repeat(11, minmax(40px, min-content));
+  }
+  .footer__social {
+    grid-column: span 2;
+    grid-row: 1/3;
+    align-items: center;
+  }
+  .footer__categories {
+    grid-column: 1;
+    grid-row: 4/5;
+  }
+  .footer__additional {
+    grid-column: 2;
+    grid-row: 4/5;
+  }
+  .footer__legal {
+    grid-column: 3;
+    grid-row: 4/5;
+  }
+  .footer__contacts {
+    grid-row: 6/7;
+  }
+  .footer__message {
+    grid-column: span 2;
+    grid-row: 8/9;
+  }
+  .footer__disclaimer {
+    grid-row: 10;
+    grid-column: 1/3;
+  }
+  .footer__disclaimer-list {
+    justify-content: flex-start;
+  }
+  .footer__cards {
+    grid-row: 10;
+    grid-column: 3;
+    justify-self: end;
+  }
+}
+@media (max-width: 992px) {
+  .footer__logo {
+    width: 104px;
+  }
+  .footer__contacts {
+    grid-column: span 3;
+  }
+}
+@media (max-width: 768px) {
+  .footer__title {
+    font-size: 14px;
+  }
+  .footer__message {
+    grid-column: span 3;
+  }
+}
+@media (max-width: 576px) {
+  .footer-wrapper {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(9, minmax(40px, -webkit-min-content));
+    grid-template-rows: repeat(9, minmax(40px, min-content));
+    grid-row-gap: 30px;
+  }
+  .footer__logo {
+    grid-column: 1;
+    grid-row: 1;
+  }
+  .footer__social {
+    display: grid;
+    gap: 20px;
+    grid-column: 1;
+    grid-row: 2;
+  }
+  .footer__categories {
+    grid-column: 1;
+    grid-row: 3;
+  }
+  .footer__additional {
+    grid-column: 1;
+    grid-row: 4;
+  }
+  .footer__legal {
+    grid-column: 1;
+    grid-row: 5;
+    justify-self: self-start;
+  }
+  .footer__contacts {
+    grid-column: 1;
+    grid-row: 6;
+  }
+  .footer__message {
+    grid-column: 1;
+    grid-row: 7;
+  }
+  .footer__form {
+    grid-column-gap: 0;
+    grid-row-gap: 20px;
+  }
+  .footer__input {
+    grid-column: span 2;
+    margin-bottom: 0;
+  }
+  .footer__textarea {
+    margin-bottom: 0;
+  }
+  .footer__required {
+    grid-column: 1;
+    grid-row: 4;
+    align-self: center;
+    justify-self: self-start;
+  }
+  .footer__disclaimer {
+    grid-column: 1;
+    grid-row: 8;
+    align-self: center;
+  }
+  .footer__cards {
+    grid-column: 1;
+    grid-row: 9;
+    justify-self: self-start;
+    align-self: center;
+  }
+}
+@media (max-width: 360px) {
+  .footer__disclaimer-list {
+    display: block;
+  }
+  .footer__disclaimer-item:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 10px;
   }
 }/*# sourceMappingURL=style.css.map */
