changed style file media queries media-packages

--- a/css/style.css
+++ b/css/style.css
@@ -1538,7 +1538,8 @@ iframe {
   .packages-varieties__offer-first {
     grid-column: span 1;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: repeat(2, minmax(250px, -webkit-min-content));
+    grid-template-rows: repeat(2, minmax(250px, min-content));
   }
   .packages-varieties__offer-first-services {
     margin-bottom: 24px;
