--- a/sass/_media-packages.sass
+++ b/sass/_media-packages.sass
@@ -35,7 +35,7 @@
 				&-first
 					grid-column: span 1
 					grid-template-columns: 1fr
-					grid-template-rows: 1fr 1fr
+					grid-template-rows: repeat(2,minmax(250px,min-content))
 					&-services
 						margin-bottom: 24px
 			&__text
