--- a/css/style.css
+++ b/css/style.css
@@ -372,21 +372,45 @@ template {
   justify-content: space-between;
   padding: 40px 0;
 }
-.header .logo {
+.header-top .logo {
   width: 177px;
 }
-.header .header__search {
+.header-top__search {
   margin-right: auto;
   margin-left: 108px;
 }
-.header .search {
+.header-menu {
+  background: #0A223D;
+  padding: 31px 0;
+  color: #fff;
+}
+
+.menu__list {
+  padding-left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0;
+}
+.menu__link {
+  color: inherit;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 18px;
+}
+.menu-mobile--hidden {
+  display: none;
+}
+
+.search {
   display: flex;
   position: relative;
   overflow: hidden;
   border-radius: 6px;
   height: 40px;
 }
-.header .search__input {
+.search__input {
   width: 350px;
   height: 100%;
   background: #F5FAFE;
@@ -397,7 +421,7 @@ template {
   line-height: 15px;
   color: #333;
 }
-.header .search__button {
+.search__button {
   position: absolute;
   right: 0;
   width: 65px;
@@ -405,45 +429,28 @@ template {
   border: 0;
   background-color: #EC1F46;
 }
-.header .user {
+
+.user {
   display: flex;
   align-items: center;
   text-decoration: none;
 }
-.header .user__avatar {
+.user__avatar {
   width: 40px;
   height: 40px;
   border-radius: 50%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-.header .user__name {
+.user__name {
   font-size: 14px;
   line-height: 18px;
   color: #333;
   margin-left: 18px;
 }
-.header .hamburger {
+
+.hamburger {
   display: none;
-}
-.header .header-menu {
-  background: #0A223D;
-  padding: 31px 0;
-  color: #fff;
-}
-.header .menu__list {
-  padding-left: 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 0;
-}
-.header .menu__link {
-  color: inherit;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 14px;
-  line-height: 18px;
 }
 
 .breadcrumb {
@@ -1306,16 +1313,13 @@ iframe {
     width: 132px;
   }
 
-  .header .header-top {
+  .header-top {
     padding: 30px 0;
   }
-  .header .header-menu {
+  .header-menu {
     padding: 22px 0;
   }
-  .header .header__search {
-    margin-left: auto;
-  }
-  .header .header__input {
+  .header__input {
     width: 340px;
   }
 
@@ -1360,15 +1364,67 @@ iframe {
   }
 }
 @media (max-width: 768px) {
+  body {
+    padding-top: 82px;
+  }
+
   .container {
     max-width: 576px;
     width: 95%;
   }
 
-  .header .search, .header .user, .header .header-menu {
+  .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 99;
+  }
+  .header-menu__mobile--hidden {
     display: none;
   }
-  .header .hamburger {
+
+  .search__mobile--hidden, .user__mobile--hidden {
+    display: none;
+  }
+
+  .user {
+    flex-direction: column;
+    margin-bottom: 20px;
+  }
+  .user__avatar {
+    margin-bottom: 10px;
+  }
+  .user__name {
+    margin-left: 0;
+    color: #fff;
+  }
+
+  .search {
+    margin-bottom: 20px;
+  }
+
+  .menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .menu-mobile--visible {
+    display: block;
+    position: fixed;
+    top: 82px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+  .menu__list {
+    flex-direction: column;
+  }
+  .menu__item {
+    margin-bottom: 20px;
+  }
+
+  .hamburger {
     width: 16px;
     height: 11px;
     display: flex;
@@ -1378,10 +1434,10 @@ iframe {
     border: none;
     background-color: #fff;
   }
-  .header .hamburger:focus {
+  .hamburger:focus {
     outline: 0;
   }
-  .header .hamburger__line {
+  .hamburger__line {
     width: 16px;
     height: 1px;
     background-color: #333;
