--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -5,65 +5,67 @@
 		align-items: center
 		justify-content: space-between
 		padding: 40px 0
-	.logo
-		width: 177px
-	.header
+		.logo
+			width: 177px
 		&__search
 			margin-right: auto
 			margin-left: 108px
-	.search
-		display: flex
-		position: relative
-		overflow: hidden
-		border-radius: 6px
-		height: 40px
-		&__input
-			width: 350px
-			height: 100%
-			background: #F5FAFE
-			border: none
-			padding-left: 23px
-			padding-right: 70px
-			font-size: 12px
-			line-height: 15px
-			color: $text-color
-		&__button
-			position: absolute
-			right: 0
-			width: 65px
-			height: 100%
-			border: 0
-			background-color: $primary
-	.user
-		display: flex
-		align-items: center
-		text-decoration: none
-		&__avatar
-			width: 40px
-			height: 40px
-			border-radius: 50%
-			object-fit: cover
-		&__name
-			font-size: 14px
-			line-height: 18px
-			color: $text-color
-			margin-left: 18px
-	.hamburger
-		display: none
-	.header-menu
+	&-menu
 		background: $dark
 		padding: 31px 0
 		color: $white
-	.menu
-		&__list
-			padding-left: 0
-			display: flex
-			align-items: center
-			justify-content: space-between
-			margin: 0
-		&__link
-			color: inherit
-			text-decoration: none
-			text-transform: uppercase
-			font-size: 14px
-			line-height: 18px
+.menu
+	&__list
+		padding-left: 0
+		display: flex
+		align-items: center
+		justify-content: space-between
+		margin: 0
+	&__link
+		color: inherit
+		text-decoration: none
+		text-transform: uppercase
+		font-size: 14px
+		line-height: 18px
+	&-mobile
+		&--hidden
+			display: none
+.search
+	display: flex
+	position: relative
+	overflow: hidden
+	border-radius: 6px
+	height: 40px
+	&__input
+		width: 350px
+		height: 100%
+		background: #F5FAFE
+		border: none
+		padding-left: 23px
+		padding-right: 70px
+		font-size: 12px
+		line-height: 15px
+		color: $text-color
+	&__button
+		position: absolute
+		right: 0
+		width: 65px
+		height: 100%
+		border: 0
+		background-color: $primary
+.user
+	display: flex
+	align-items: center
+	text-decoration: none
+	&__avatar
+		width: 40px
+		height: 40px
+		border-radius: 50%
+		object-fit: cover
+	&__name
+		font-size: 14px
+		line-height: 18px
+		color: $text-color
+		margin-left: 18px
+.hamburger
+	display: none
