changed view humburger by click to him

--- a/css/style.css
+++ b/css/style.css
@@ -1437,6 +1437,17 @@ iframe {
     height: 1px;
     background-color: #333;
   }
+  .hamburger__line-top--transform {
+    transform: rotate(45deg) translate(1px, 5px);
+    width: 20px;
+  }
+  .hamburger__line-bottom--transform {
+    transform: rotate(-45deg) translate(1px, -5px);
+    width: 20px;
+  }
+  .hamburger__line-middle--none {
+    display: none;
+  }
 
   .hotel .swiper {
     height: 350px;
