--- a/sass/style.sass
+++ b/sass/style.sass
@@ -21,6 +21,9 @@
 // Подключение для блока footer
 @import 'blocks/_footer'
 // Подключение стилей для адаптива
+// Подключение для блока modal
+@import 'blocks/_modal'
+// Подключение стилей для адаптива
 @import 'media'
 // Подключение стилей для адаптива блока packages
 @import 'media-packages'
