--- a/css/style.css
+++ b/css/style.css
@@ -398,7 +398,7 @@ template {
   font-size: 14px;
   line-height: 18px;
 }
-.menu-mobile--hidden {
+.menu-mobile-hidden {
   display: none;
 }
 
@@ -511,6 +511,7 @@ template {
   border-radius: 4px;
   background-color: #EC1F46;
   color: #fff;
+  cursor: pointer;
 }
 .hotel__rating-text {
   font-weight: 600;
@@ -673,17 +674,18 @@ template {
 
 .button {
   width: 100%;
-  min-height: 45px;
-  display: inline-block;
   background: #EC1F46;
   font-weight: 600;
   font-size: 14px;
   line-height: 45px;
   color: #fff;
-  text-decoration: none;
-  text-align: center;
   border-radius: 4px;
   margin-top: 17px;
+  border: 0;
+  cursor: pointer;
+}
+.button:focus {
+  outline: none;
 }
 
 iframe {
@@ -1284,6 +1286,112 @@ iframe {
   justify-self: center;
 }
 
+.modal-booking__overlay, .modal-rating__overlay {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: rgba(0, 143, 223, 0.39);
+  z-index: 100;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+.modal-booking__overlay--visible, .modal-rating__overlay--visible {
+  visibility: visible;
+  opacity: 1;
+}
+.modal-booking__dialog, .modal-rating__dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 478px;
+  padding: 33px 44px;
+  background-color: #0A223D;
+  color: #fff;
+  border-radius: 8px;
+  z-index: 101;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+.modal-booking__dialog--visible, .modal-rating__dialog--visible {
+  visibility: visible;
+  opacity: 1;
+}
+.modal-booking__close, .modal-rating__close {
+  position: absolute;
+  right: 18px;
+  top: 17px;
+  text-decoration: none;
+  cursor: pointer;
+}
+.modal__title {
+  color: #fff;
+  text-transform: uppercase;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+  margin-top: 0;
+  margin-bottom: 16px;
+}
+.modal__form {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(-webkit-min-content, 1fr));
+  grid-template-columns: repeat(3, minmax(min-content, 1fr));
+}
+.modal__input, .modal__textarea {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  padding: 18px 23px;
+  border-radius: 4px;
+  border: none;
+  grid-column: 1/4;
+}
+.modal__input {
+  margin-bottom: 15px;
+}
+.modal__input:focus {
+  outline: none;
+}
+.modal__textarea {
+  min-height: 123px;
+  margin-bottom: 15px;
+}
+.modal__textarea:focus {
+  outline: none;
+}
+.modal__button {
+  min-width: 160px;
+  min-height: 50px;
+  border-radius: 4px;
+  border: none;
+  background: #EC1F46;
+  color: #fff;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  grid-column: 1;
+  grid-row: 5;
+}
+.modal__required {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  color: #BDBDBD;
+  grid-column: 3;
+  grid-row: 5;
+  align-self: center;
+  justify-self: self-end;
+}
+
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
@@ -1380,11 +1488,11 @@ iframe {
     right: 0;
     z-index: 99;
   }
-  .header-menu__mobile--hidden {
+  .header-menu-mobile-hidden {
     display: none;
   }
 
-  .search__mobile--hidden, .user__mobile--hidden {
+  .search-mobile-hidden, .user-mobile-hidden {
     display: none;
   }
 
@@ -1406,7 +1514,7 @@ iframe {
     min-height: 400px;
     justify-content: space-between;
   }
-  .menu-mobile--visible {
+  .menu-mobile-visible {
     display: block;
     position: fixed;
     top: 82px;
@@ -1522,6 +1630,18 @@ iframe {
   .activities-blocks__type {
     width: 268px;
   }
+
+  .modal__required {
+    grid-column: 1;
+    grid-row: 5;
+    align-self: center;
+    justify-self: self-start;
+    margin-bottom: 10px;
+  }
+  .modal__button {
+    grid-column: 1;
+    grid-row: 6;
+  }
 }
 @media (max-width: 576px) {
   .logo {
@@ -1554,6 +1674,13 @@ iframe {
   .activities-blocks__type:nth-child(3) {
     margin-bottom: 20px;
   }
+
+  .modal__title {
+    font-size: 15px;
+  }
+  .modal__input {
+    padding: 15px;
+  }
 }
 @media (max-width: 360px) {
   .search__input {
@@ -1561,6 +1688,10 @@ iframe {
   }
 }
 @media (max-width: 320px) {
+  .hotel__name {
+    font-size: 15px;
+  }
+
   .subscribe {
     width: 220px;
   }
