--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -67,12 +67,12 @@
 		right: 0
 		z-index: 99
 		&-menu
-			&__mobile
-				&--hidden
+			&-mobile
+				&-hidden
 					display: none
 	.search, .user
-		&__mobile
-			&--hidden
+		&-mobile
+			&-hidden
 				display: none
 	.user
 		flex-direction: column
@@ -88,7 +88,7 @@
 		min-height: 400px
 		justify-content: space-between
 		&-mobile
-			&--visible
+			&-visible
 				display: block
 				position: fixed
 				top: 82px
@@ -177,6 +177,16 @@
 		&-blocks
 			&__type
 				width: 268px
+	.modal
+		&__required
+			grid-column: 1
+			grid-row: 5
+			align-self: center
+			justify-self: self-start
+			margin-bottom: 10px
+		&__button
+			grid-column: 1
+			grid-row: 6
 @media ( max-width: 576px)
 	.logo
 		width: 99px
@@ -201,11 +211,19 @@
 				height: 255px
 				&:nth-child(3)
 					margin-bottom: 20px
+	.modal
+		&__title
+			font-size: 15px
+		&__input
+			padding: 15px
 @media ( max-width: 360px)
 	.header
 	.search
 		&__input
 			width: 250px
 @media ( max-width: 320px)
+	.hotel
+		&__name
+			font-size: 15px
 	.subscribe
 		width: 220px
