--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -10,7 +10,7 @@
 			z-index: 100
 			visibility: hidden
 			opacity: 0
-			transition: opacity 0.3s
+			transition: opacity 1s
 			&--visible
 				visibility: visible
 				opacity: 1
@@ -27,7 +27,7 @@
 			z-index: 101
 			visibility: hidden
 			opacity: 0
-			transition: opacity 0.3s
+			transition: opacity 1s
 			&--visible
 				visibility: visible
 				opacity: 1
@@ -80,6 +80,9 @@
 		line-height: 15px
 		grid-column: 1
 		grid-row: 5
+		cursor: pointer
+		&:focus
+			outline: none
 	&__required
 		font-style: normal
 		font-weight: bold
