--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -54,6 +54,15 @@
         width: 339px
         &:nth-child(1),&:nth-child(2)
           margin-bottom: 20px
+  .modal
+    &-booking,&-rating
+      &__dialog
+        top: 35%
+        left: 25%
+        right: 25%
+        transform: translate(0%, -35%)
+        max-width: 100%
+        padding: 33px 44px
 @media (max-width: 767px)
   body
     padding-top: 82px
@@ -178,6 +187,10 @@
       &__type
         width: 268px
   .modal
+    &-booking,&-rating
+      &__dialog
+        left: 15%
+        right: 15%
     &__required
       grid-column: 1
       grid-row: 5
@@ -216,11 +229,20 @@
       font-size: 15px
     &__input
       padding: 15px
+    &-booking,&-rating
+      &__dialog
+        left: 5%
+        right: 5%
 @media ( max-width: 360px)
   .header
   .search
     &__input
       width: 250px
+  .modal
+    &-booking,&-rating
+      &__dialog
+        left: 0%
+        right: 0%
 @media ( max-width: 320px)
   .hotel
     &__name
